@@ -1,5 +1,6 @@
 2009-11-09  Xavier Perseguers  <typo3@perseguers.ch>
 
+	* Fixed bug RFC #12515: DAM-related: CONCAT operator cannot be used after LIKE
 	* Fixed bug RFC #10411: Applied missing chunks of patch
 
 2009-11-07  Xavier Perseguers  <typo3@perseguers.ch>
